--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
 <body>
 
-    <section id="undangan"
+   <section id="undangan"
         class="undangan w-100 h-100 p-4 mx-auto text-center d-flex justify-content-center align-items-center text-white">
         <main>
             <h4>reza & gina</h4>
             <h1>Kepada <span>Bapak/Ibu/Saudara</span></h1>
             <p>Tamu Undangan</p>
             <div class="simply-countdown"></div>
-            <a href="#undangan" class="btn btn-lg mt-100" id="unlockButton" onClick="unlockPage()">Lihat Undangan</a>
+            <a href="#undangan" class="btn btn-lg mt-100" onClick="enableScroll()">Lihat Undangan</a>
         </main>
     </section>
 
