--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
 <body>
 
-   <section id="undangan"
+    <section id="undangan"
         class="undangan w-100 h-100 p-4 mx-auto text-center d-flex justify-content-center align-items-center text-white">
         <main>
             <h4>reza & gina</h4>
             <h1>Kepada <span>Bapak/Ibu/Saudara</span></h1>
             <p>Tamu Undangan</p>
             <div class="simply-countdown"></div>
-            <a href="#undangan" class="btn btn-lg mt-100" onClick="enableScroll()">Lihat Undangan</a>
+            <a href="#undangan" class="btn btn-lg mt-100" id="unlockButton" onClick="unlockPage()">Lihat Undangan</a>
         </main>
     </section>
 
@@ -91,7 +91,7 @@
                         <p>putri dari bapak reinaldo <br> dan <br> ibu adeline</p>
                     </div>
                     <div class="col-12 col-lg-6 text-center mb-4">
-                        <div data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
+                        <div data-aos="fade-left" data-aos-duration="1000" data-aos-delay="100">
                             <img width="50%" src="ppo.jpg" alt="pria" class="img-responsive rounded-circle">
                             <h2>reza</h2>
                             <p>reza meliliki nama lengkap reza, saya anak ke 2</p>
